welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: type array
var tab =new array[Color] (6)
             ^